// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography components BodyText should match a snapshot 1`] = `
<ElBodyText
  className=""
>
  I am body text
</ElBodyText>
`;

exports[`Typography components BodyText should match a snapshot with all modifiers 1`] = `
<ElBodyText
  className="el-has-grey-text el-has-bold-text el-has-italic-text el-has-no-margin el-has-section-margin el-has-centered-text"
>
  I am body text
</ElBodyText>
`;

exports[`Typography components SmallText should match a snapshot 1`] = `
<ElSmallText
  className=""
>
  I am small text
</ElSmallText>
`;

exports[`Typography components SmallText should match a snapshot 2`] = `
<ElSmallText
  className=""
>
  I am small text
</ElSmallText>
`;

exports[`Typography components SmallText should match a snapshot with all modifiers 1`] = `
<ElSmallText
  className="el-has-grey-text el-has-bold-text el-has-italic-text el-has-no-margin el-has-section-margin el-has-centered-text"
>
  I am small text
</ElSmallText>
`;

exports[`Typography components SmallText should match a snapshot with all modifiers 2`] = `
<ElSmallText
  className="el-has-grey-text el-has-bold-text el-has-italic-text el-has-no-margin el-has-section-margin el-has-centered-text"
>
  I am small text
</ElSmallText>
`;

exports[`Typography components SubTitle should match a snapshot 1`] = `
<ElSubtitle
  className=""
>
  I am a subtitle
</ElSubtitle>
`;

exports[`Typography components SubTitle should match a snapshot with all modifiers 1`] = `
<ElSubtitle
  className="el-has-grey-text el-has-bold-text el-has-italic-text el-has-no-margin el-has-section-margin el-has-centered-text"
>
  I am a subtitle
</ElSubtitle>
`;

exports[`Typography components Title should match a snapshot 1`] = `
<ElTitle
  className=""
>
  I am a title
</ElTitle>
`;

exports[`Typography components Title should match a snapshot with all modifiers 1`] = `
<ElTitle
  className="el-has-grey-text el-has-regular-text el-has-italic-text el-has-no-margin el-has-section-margin el-has-centered-text"
>
  I am a title
</ElTitle>
`;
